infrastructure/service-mesh/kali/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kali-service
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: kali.service-mesh.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 9090
  tls:
    - hosts:
        - kali.service-mesh.apoorva64.com
      secretName: kali-service-tls
